updated read more button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     sunt neque, ipsam et sit illo ipsa ea repudiandae nisi nesciunt dolorum. Hic exercitationem tenetur
                     ad.</p>
                     <a href="navbar.html" class="btn btn-primary">
-                        Show more
+                        Show more about us
                     </a>
             </div>
 
